# MARVIN

./: README.md
src/core/caros_common/: CMakeLists.txt  CMakeLists.txt~  package.xml
src/core/caros_common/src/: CarosNodeServiceInterface.cpp  CovisRos.cpp  CovisRos.cpp~  common.cpp
src/core/caros_common_msgs/: CMakeLists.txt  CMakeLists.txt~  package.xml
src/core/caros_common_msgs/msg/: CameraCalibration.msg  CarosNodeState.msg  ECVContour3D.msg  ECVContours3D.msg  ECVExtendedLineSegment3D.msg  ECVExtendedLineSegments3D.msg  ECVLineSegment2D.msg  ECVLineSegment3D.msg  ECVLineSegments3D.msg  ECVLink.msg  ECVLinks.msg  ECVObjectRelations.msg  ECVRelationsMatrix.msg  ECVRelationsVector.msg  ECVScene.msg  ECVSceneRelations.msg  ECVSurface3D.msg  ECVSurfaces3D.msg  ECVSurfling3D.msg  ECVSurflings3D.msg  ECVTexlet2D.msg  ECVTexlet3D.msg  ECVTexlets2D.msg  ECVTexlets3D.msg  StereoCalibration.msg  StereoCalibration.msg~  TimeSignal.msg
src/core/caros_common_msgs/srv/: CapturePoints2.srv  ConfigBool.srv  ConfigInt.srv  CreateObjectModel.srv
src/hwcomponents/caros_netft/: CMakeLists.txt  mainpage.md  package.xml  rosdoc.yaml
src/hwcomponents/caros_pg70/: CMakeLists.txt  package.xml  pg70.prop.xml
src/hwcomponents/caros_pg70/src/: PG70Node.cpp  PG70ServiceInterface.cpp  pg70_main.cpp
src/hwcomponents/caros_robotiq/: CMakeLists.txt  package.xml
src/hwcomponents/caros_robotiq/src/: Robotiq3Node.cpp  mainR3.cpp
src/hwcomponents/caros_sdh/: CMakeLists.txt  package.xml
src/hwcomponents/caros_sdh/src/: SDHNode.cpp  main_SDH.cpp
src/hwcomponents/caros_trakstar/: CMakeLists.txt  package.xml
src/hwcomponents/caros_trakstar/src/: Trakstar.cpp  Trakstar.hpp  TrakstarCalibration.cpp  TrakstarCalibration.h  main.cpp  stdafx.h  trakstar_calibrated_nodelet.cpp  trakstar_calibrated_nodelet.h  trakstar_raw_nodelet.cpp  trakstar_raw_nodelet.h
src/hwcomponents/caros_universalrobot/: CMakeLists.txt  ftcalib.xml  package.xml  ur1.prop.xml  ur1safe.prop.xml  ur2.prop.xml
src/hwcomponents/caros_universalrobot/src/: URServiceInterface.cpp  URServiceInterface.hpp  UniversalRobots.cpp  UniversalRobots.hpp  UniversalRobotsSim.cpp  UniversalRobotsSim.hpp  ur_main.cpp  ursafe_main.cpp  ursim_main.cpp
src/hwcomponents/freenect_launch_marvin/: CMakeLists.txt  package.xml  position_kinect_center.yaml  position_kinect_left.yaml  position_kinect_right.yaml  rosdoc.yaml
src/hwcomponents/freenect_launch_marvin/launch/: kinect_center.launch  kinect_emulator.launch  kinect_left.launch  kinect_right.launch
src/hwcomponents/freenect_launch_marvin/src/: broadcaster.cpp
src/hwcomponents/kinect_vibrator/: CMakeLists.txt  package.xml
src/hwcomponents/kinect_vibrator/src/: KinectVibrator.cpp  KinectVibrator.hpp  KinectVibratorTest.cpp  kinectVibratorServerInterfaceTest.cpp  lpc.c  reset_kinect_vibrators.c  start_kinect_vibrators.c
src/hwcomponents/kinect_vibrator/srv/: FrameCount.srv
src/hwcomponents/openni_launch_marvin/: CMakeLists.txt  camera_info_kinect_center_rgb.yaml  camera_info_kinect_center_rgb.yaml.bak  camera_info_kinect_left_rgb.yaml  camera_info_kinect_left_rgb.yaml.bak  camera_info_kinect_right_depth.yaml  camera_info_kinect_right_rgb.yaml  camera_info_kinect_right_rgb.yaml.bak  mainpage.dox  package.xml  position_kinect_center.yaml  position_kinect_left.yaml  position_kinect_right.yaml  rosdoc.yaml
src/hwcomponents/openni_launch_marvin/launch/: kinect_left.launch  kinect_right.launch
src/hwcomponents/openni_launch_marvin/old_position/: position_kinect_center.yaml  position_kinect_left.yaml
src/hwcomponents/openni_launch_marvin/src/: broadcaster.cpp
src/hwcomponents/stereo_camera/: CMakeLists.txt  camera.launch  marvin_cameras.yaml  nodelet_stereo_camera.xml  package.xml  rosdoc.yaml
src/hwcomponents/stereo_camera/calibrationFiles/: BumbleBee2-60-11072182_raw.txt  BumbleBee2-60-11072220_raw.txt  BumbleBee2-60-8511446_raw.txt  BumbleBee2-60-8511475_raw.txt  Calib_undist+rect_Pike_Marvin.txt  Pike-268939431-268939432_raw.txt  Pike_F421C_opencv.txt  position_11072182.txt  position_11072220.txt  position_268939431.txt  position_8511446.txt
src/hwcomponents/stereo_camera/launch/: BumblebeeCenter.launch  BumblebeeLeft.launch  BumblebeeRight.launch  PikeBack.launch
src/hwcomponents/stereo_camera/src/: stereo_to_points.cpp
src/interfaces/caros_control/: CMakeLists.txt  package.xml
src/interfaces/caros_control/src/: GripperSIProxy.cpp  GripperServiceInterface.cpp  MobileDeviceServiceInterface.cpp  SerialDeviceSIProxy.cpp  SerialDeviceServiceInterface.cpp
src/interfaces/caros_control_msgs/: CMakeLists.txt  package.xml  rosdoc.yaml
src/interfaces/caros_control_msgs/msg/: GripperState.msg  RobotState.msg  WrenchData.msg
src/interfaces/caros_control_msgs/srv/: SerialDeviceForceControlStart.srv  SerialDeviceForceControlStop.srv  SerialDeviceForceControlUpdate.srv  SerialDeviceMoveLin.srv  SerialDeviceMoveLinFC.srv  SerialDeviceMovePTP.srv  SerialDeviceMovePTP_T.srv  SerialDeviceMoveVelQ.srv  SerialDeviceMoveVelT.srv
src/interfaces/caros_sensor/: CMakeLists.txt  package.xml
src/interfaces/caros_sensor/src/: ButtonSensorSIProxy.cpp  FTSensorSIProxy.cpp  FTSensorServiceInterface.cpp  PoseSensorSIProxy.cpp  PoseSensorServiceInterface.cpp
src/interfaces/caros_sensor_msgs/: CMakeLists.txt  package.xml
src/interfaces/caros_sensor_msgs/msg/: ButtonSensorState.msg  PoseSensorState.msg  TactileArrayData.msg  TactileArrayState.msg  TrakStarPose.msg
src/swcomponents/cloud_merge/: CMakeLists.txt  CMakeLists.txt~  package.xml
src/swcomponents/cloud_merge/calibration_verify/: CMakeLists.txt
src/swcomponents/cloud_merge/launch/: cloud_merge.launch
src/swcomponents/marvin/: CMakeLists.txt  manifest.xml  old_CMakeLists.txt  package.xml  rosdoc.yaml
src/swcomponents/one_shot_learning/: CMakeLists.txt  RobWorkStudio.ini  mainpage.dox  package.xml  robwork-0.7.0.cfg.xml  run_sim.sh  rwsettings.xml
src/swcomponents/point_cloud_visualization/: CMakeLists.txt
src/swcomponents/pose_estimation_covis/: CMakeLists.txt  mainpage.dox  package.xml
(+428 files in other folders)
