<?xml version="1.0"?>
<package>
  <name>caros_common</name>
  <version>0.0.1</version>
  <description>The caros common package</description>
  <maintainer email="mband@mmmi.sdu.dk">mband</maintainer>
  <license>BSD</license>
  <url type="website">https://gitlab.com/caro-sdu/caros/wikis/home</url>
  <url type="repository">https://gitlab.com/caro-sdu/caros.git</url>
  <url type="bugtracker">https://gitlab.com/caro-sdu/caros/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>caros_common_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>caros_common_msgs</run_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>

</package>
