<?xml version="1.0"?>
<package>
  <name>caros_sdh</name>
  <version>0.0.1</version>
  <description>CAROS sdh gripper node</description>
  <maintainer email="mband@mmmi.sdu.dk">mband</maintainer>
  <license>BSD</license>
  <url type="website">https://gitlab.com/caro-sdu/caros/wikis/home</url>
  <url type="repository">https://gitlab.com/caro-sdu/caros.git</url>
  <url type="bugtracker">https://gitlab.com/caro-sdu/caros/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>caros_common</build_depend>
  <build_depend>caros_control</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>caros_common</run_depend>
  <run_depend>caros_control</run_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>
</package>
